simplfy algorithm, try all jitable version, not working yet

--- a/docs/notebooks/zernike_eval.ipynb
+++ b/docs/notebooks/zernike_eval.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -67,13 +67,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DESC version 0.10.3+183.g69c89b910.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 19.48 GB available memory\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import mpmath\n",
@@ -86,12 +95,13 @@
     "    zernike_radial_coeffs,\n",
     "    zernike_radial_poly,\n",
     "    zernike_radial_optimized,\n",
+    "    zernike_radial_optimized_jit,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -116,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -128,13 +138,13 @@
      "output_type": "stream",
      "text": [
       "zernike_radial, 0th derivative\n",
-      "2.64 ms ± 212 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "3.14 ms ± 1.56 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
       "zernike_radial, 1st derivative\n",
-      "5.11 ms ± 210 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "4.23 ms ± 2.35 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
       "zernike_radial, 2nd derivative\n",
-      "6.56 ms ± 268 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "3.37 ms ± 219 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
       "zernike_radial, 3rd derivative\n",
-      "8.35 ms ± 403 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "4.66 ms ± 857 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -151,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -163,13 +173,13 @@
      "output_type": "stream",
      "text": [
       "zernike_radial_poly, 0th derivative\n",
-      "18.7 ms ± 635 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "15 ms ± 189 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 1st derivative\n",
-      "18 ms ± 236 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "14.8 ms ± 250 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 2nd derivative\n",
-      "19.6 ms ± 1.3 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "14.1 ms ± 115 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 3rd derivative\n",
-      "19.4 ms ± 996 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "14.3 ms ± 129 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -208,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -226,17 +236,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 5.06 s\n",
-      "Wall time: 10.3 s\n",
+      "CPU times: total: 1.38 s\n",
+      "Wall time: 8.81 s\n",
       "zernike_radial_exact, 1st derivative\n",
-      "CPU times: total: 4.88 s\n",
-      "Wall time: 9.98 s\n",
+      "CPU times: total: 1.17 s\n",
+      "Wall time: 8.8 s\n",
       "zernike_radial_exact, 2nd derivative\n",
-      "CPU times: total: 4.44 s\n",
-      "Wall time: 9.95 s\n",
+      "CPU times: total: 1.23 s\n",
+      "Wall time: 8.72 s\n",
       "zernike_radial_exact, 3rd derivative\n",
-      "CPU times: total: 5.58 s\n",
-      "Wall time: 9.93 s\n"
+      "CPU times: total: 625 ms\n",
+      "Wall time: 8.71 s\n"
      ]
     }
    ],
@@ -267,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -329,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -896,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -904,9 +914,9 @@
      "output_type": "stream",
      "text": [
       "zernike_radial, 0th derivative with DESC method\n",
-      "2.98 ms ± 318 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "1.55 ms ± 34.1 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 0th derivative with optimized method\n",
-      "2.51 ms ± 146 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "1.19 ms ± 3.91 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -914,12 +924,39 @@
     "print(\"zernike_radial, 0th derivative with DESC method\")\n",
     "%timeit _ = zernike_radial(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], 0).block_until_ready()\n",
     "print(\"zernike_radial, 0th derivative with optimized method\")\n",
-    "%timeit _ = zernike_radial_optimized(r, basis.modes[:,0], basis.modes[:,1]).block_until_ready()"
+    "%timeit optimized = zernike_radial_optimized(r, basis.modes[:,0], basis.modes[:,1]).block_until_ready()\n",
+    "# print(\"zernike_radial, 0th derivative with optimized all JIT method\")\n",
+    "# %timeit _ = zernike_radial_optimized_jit(r, basis.modes[:,0], basis.modes[:,1]).block_until_ready()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zernike_radial_exact, 0th derivative\n",
+      "CPU times: total: 1.03 s\n",
+      "Wall time: 8.62 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "mpmath.mp.dps = 100\n",
+    "c = zernike_radial_coeffs(basis.modes[:, 0], basis.modes[:, 1], exact=True)\n",
+    "\n",
+    "print(\"zernike_radial_exact, 0th derivative\")\n",
+    "%time zt0 = np.array([np.asarray(mpmath.polyval(list(ci), r), dtype=float) for ci in c]).T\n",
+    "zr0= zernike_radial(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], 0)\n",
+    "optimized = zernike_radial_optimized(r, basis.modes[:,0], basis.modes[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +971,6 @@
     }
    ],
    "source": [
-    "optimized = zernike_radial_optimized(r, basis.modes[:,0], basis.modes[:,1])\n",
     "fig, ax = plt.subplots(1, 2, squeeze=True, figsize=(10, 4))\n",
     "im = ax[0].scatter(\n",
     "    basis.modes[:, 0],\n",
@@ -969,13 +1005,6 @@
     "    \"$\\max_{x \\in (0,1)} |Z_{lm}(x) - \\\\tilde{Z}_{lm}^{optimized}(x)|$\", fontsize=14\n",
     ");"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
