--- a/docs/notebooks/zernike_eval.ipynb
+++ b/docs/notebooks/zernike_eval.ipynb
@@ -78,8 +78,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DESC version 0.10.3+183.g69c89b910.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
-      "Using device: CPU, with 19.48 GB available memory\n"
+      "DESC version 0.10.3+184.g3a6e5c438.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 19.51 GB available memory\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -914,9 +914,9 @@
      "output_type": "stream",
      "text": [
       "zernike_radial, 0th derivative with DESC method\n",
-      "1.55 ms ± 34.1 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "1.55 ms ± 28 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 0th derivative with optimized method\n",
-      "1.19 ms ± 3.91 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "1.21 ms ± 9.34 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -939,8 +939,8 @@
      "output_type": "stream",
      "text": [
       "zernike_radial_exact, 0th derivative\n",
-      "CPU times: total: 1.03 s\n",
-      "Wall time: 8.62 s\n"
+      "CPU times: total: 984 ms\n",
+      "Wall time: 8.68 s\n"
      ]
     }
    ],
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1005,6 +1005,13 @@
     "    \"$\\max_{x \\in (0,1)} |Z_{lm}(x) - \\\\tilde{Z}_{lm}^{optimized}(x)|$\", fontsize=14\n",
     ");"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
