name change for zernike_radial and zernike_radial_optimized, fix how the function is called

--- a/docs/notebooks/zernike_eval.ipynb
+++ b/docs/notebooks/zernike_eval.ipynb
@@ -93,8 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DESC version 0.10.3+264.g6d540a2d.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
-      "Using device: CPU, with 12.39 GB available memory\n"
+      "DESC version 0.10.3+265.g6c1a4e10.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 12.16 GB available memory\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
     "from desc.basis import (\n",
     "    polyder_vec,\n",
     "    ZernikePolynomial,\n",
-    "    zernike_radial_optimized,\n",
+    "    zernike_radial,\n",
     "    zernike_radial_coeffs,\n",
     "    zernike_radial_poly,\n",
     ")"
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -151,25 +151,25 @@
      "output_type": "stream",
      "text": [
       "zernike_radial, 0th derivative\n",
-      "852 µs ± 8.33 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "895 µs ± 16.2 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 1st derivative\n",
-      "1.46 ms ± 256 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "983 µs ± 12.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 2nd derivative\n",
-      "1.21 ms ± 128 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "1.15 ms ± 10.9 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 3rd derivative\n",
-      "2.47 ms ± 365 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.73 ms ± 14.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "print(\"zernike_radial, 0th derivative\")\n",
-    "%timeit _ = zernike_radial_optimized(r, basis.modes[:,0], basis.modes[:,1], 0).block_until_ready()\n",
+    "%timeit _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 0).block_until_ready()\n",
     "print(\"zernike_radial, 1st derivative\")\n",
-    "%timeit _ = zernike_radial_optimized(r, basis.modes[:,0], basis.modes[:,1], 1).block_until_ready()\n",
+    "%timeit _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 1).block_until_ready()\n",
     "print(\"zernike_radial, 2nd derivative\")\n",
-    "%timeit _ = zernike_radial_optimized(r, basis.modes[:,0], basis.modes[:,1], 2).block_until_ready()\n",
+    "%timeit _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 2).block_until_ready()\n",
     "print(\"zernike_radial, 3rd derivative\")\n",
-    "%timeit _ = zernike_radial_optimized(r, basis.modes[:,0], basis.modes[:,1], 3).block_until_ready()"
+    "%timeit _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 3).block_until_ready()"
    ]
   },
   {
@@ -186,13 +186,13 @@
      "output_type": "stream",
      "text": [
       "zernike_radial_poly, 0th derivative\n",
-      "11.4 ms ± 253 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "12.4 ms ± 321 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 1st derivative\n",
-      "11.2 ms ± 197 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "12.2 ms ± 396 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 2nd derivative\n",
-      "11.1 ms ± 94.5 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "12.2 ms ± 260 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 3rd derivative\n",
-      "11.2 ms ± 75.8 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "12.1 ms ± 216 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -243,17 +243,17 @@
      "output_type": "stream",
      "text": [
       "zernike_radial_exact, 0th derivative\n",
-      "CPU times: user 5.35 s, sys: 0 ns, total: 5.35 s\n",
-      "Wall time: 5.35 s\n",
+      "CPU times: user 5.56 s, sys: 0 ns, total: 5.56 s\n",
+      "Wall time: 5.56 s\n",
       "zernike_radial_exact, 1st derivative\n",
-      "CPU times: user 5.36 s, sys: 0 ns, total: 5.36 s\n",
-      "Wall time: 5.36 s\n",
+      "CPU times: user 5.56 s, sys: 0 ns, total: 5.56 s\n",
+      "Wall time: 5.56 s\n",
       "zernike_radial_exact, 2nd derivative\n",
-      "CPU times: user 5.29 s, sys: 0 ns, total: 5.29 s\n",
-      "Wall time: 5.29 s\n",
+      "CPU times: user 5.54 s, sys: 0 ns, total: 5.54 s\n",
+      "Wall time: 5.54 s\n",
       "zernike_radial_exact, 3rd derivative\n",
-      "CPU times: user 5.27 s, sys: 0 ns, total: 5.27 s\n",
-      "Wall time: 5.27 s\n"
+      "CPU times: user 5.53 s, sys: 0 ns, total: 5.53 s\n",
+      "Wall time: 5.53 s\n"
      ]
     }
    ],
@@ -288,10 +288,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zr0 = zernike_radial_optimized(r, basis.modes[:, 0], basis.modes[:, 1], 0)\n",
-    "zr1 = zernike_radial_optimized(r, basis.modes[:, 0], basis.modes[:, 1], 1)\n",
-    "zr2 = zernike_radial_optimized(r, basis.modes[:, 0], basis.modes[:, 1], 2)\n",
-    "zr3 = zernike_radial_optimized(r, basis.modes[:, 0], basis.modes[:, 1], 3)\n",
+    "zr0 = zernike_radial(r, basis.modes[:, 0], basis.modes[:, 1], 0)\n",
+    "zr1 = zernike_radial(r, basis.modes[:, 0], basis.modes[:, 1], 1)\n",
+    "zr2 = zernike_radial(r, basis.modes[:, 0], basis.modes[:, 1], 2)\n",
+    "zr3 = zernike_radial(r, basis.modes[:, 0], basis.modes[:, 1], 3)\n",
     "zp0 = zernike_radial_poly(\n",
     "    r[:, np.newaxis], basis.modes[:, 0], basis.modes[:, 1], dr=0, exact=False\n",
     ")\n",
