fix loop limits to be integers

--- a/docs/notebooks/zernike_eval.ipynb
+++ b/docs/notebooks/zernike_eval.ipynb
@@ -93,8 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DESC version 0.10.3+265.g6c1a4e10.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
-      "Using device: CPU, with 12.16 GB available memory\n"
+      "DESC version 0.10.3+266.g4248e9f3.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 12.10 GB available memory\n"
      ]
     }
    ],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -151,13 +151,13 @@
      "output_type": "stream",
      "text": [
       "zernike_radial, 0th derivative\n",
-      "895 µs ± 16.2 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "860 µs ± 15.3 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 1st derivative\n",
-      "983 µs ± 12.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "1.08 ms ± 179 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
       "zernike_radial, 2nd derivative\n",
-      "1.15 ms ± 10.9 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "1.15 ms ± 218 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
       "zernike_radial, 3rd derivative\n",
-      "1.73 ms ± 14.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "1.61 ms ± 52.6 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -186,13 +186,13 @@
      "output_type": "stream",
      "text": [
       "zernike_radial_poly, 0th derivative\n",
-      "12.4 ms ± 321 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "11.2 ms ± 102 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 1st derivative\n",
-      "12.2 ms ± 396 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "11.2 ms ± 283 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 2nd derivative\n",
-      "12.2 ms ± 260 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "10.9 ms ± 74.8 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 3rd derivative\n",
-      "12.1 ms ± 216 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "11.1 ms ± 228 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
