fix for [1,size] arrays

--- a/docs/notebooks/zernike_eval.ipynb
+++ b/docs/notebooks/zernike_eval.ipynb
@@ -93,8 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DESC version 0.10.3+266.g4248e9f3.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
-      "Using device: CPU, with 12.10 GB available memory\n"
+      "DESC version 0.10.3+309.g4821a557.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 12.28 GB available memory\n"
      ]
     }
    ],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -151,13 +151,13 @@
      "output_type": "stream",
      "text": [
       "zernike_radial, 0th derivative\n",
-      "860 µs ± 15.3 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "817 µs ± 13.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 1st derivative\n",
-      "1.08 ms ± 179 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "911 µs ± 14.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 2nd derivative\n",
-      "1.15 ms ± 218 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "1.07 ms ± 6.83 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 3rd derivative\n",
-      "1.61 ms ± 52.6 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.58 ms ± 3.84 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -186,13 +186,13 @@
      "output_type": "stream",
      "text": [
       "zernike_radial_poly, 0th derivative\n",
-      "11.2 ms ± 102 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "18.7 ms ± 1.01 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 1st derivative\n",
-      "11.2 ms ± 283 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "18.9 ms ± 473 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 2nd derivative\n",
-      "10.9 ms ± 74.8 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "18.1 ms ± 1.64 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
       "zernike_radial_poly, 3rd derivative\n",
-      "11.1 ms ± 228 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "18.4 ms ± 2.06 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
