split FixNearAxis into an objective for R,Z and lambda separately

--- a/docs/notebooks/tutorials/nae_constraint.ipynb
+++ b/docs/notebooks/tutorials/nae_constraint.ipynb
@@ -494,11 +494,34 @@
    ],
    "source": [
     "# utility functions for getting the NAE constraints\n",
-    "from desc.objectives import get_equilibrium_objective, get_NAE_constraints\n",
+    "from desc.objectives import (\n",
+    "    get_equilibrium_objective,\n",
+    "    get_NAE_constraints,\n",
+    "    FixAxisR,\n",
+    "    FixAxisZ,\n",
+    "    FixNearAxisR,\n",
+    "    FixNearAxisZ,\n",
+    "    FixPressure,\n",
+    "    FixCurrent,\n",
+    "    FixPsi,\n",
+    ")\n",
     "\n",
     "eq_NAE = eq_fit.copy()\n",
-    "# this has all the constraints we need\n",
+    "# the constraints we want are:\n",
+    "constraints = (\n",
+    "    FixAxisR(eq_NAE),\n",
+    "    FixAxisZ(eq_NAE),\n",
+    "    FixNearAxisR(eq_NAE, qsc_eq, order=1),\n",
+    "    FixNearAxisZ(eq_NAE, qsc_eq, order=1),\n",
+    "    FixPressure(eq_NAE),\n",
+    "    FixCurrent(eq_NAE, iota=False),\n",
+    "    FixPsi(eq_NAE, psi=0.0),\n",
+    ")\n",
+    "\n",
+    "# Alternatively, we can use the util function: \n",
     "constraints = get_NAE_constraints(eq_NAE, qsc_eq, order=1)\n",
+    "print(constraints)\n",
+    "\n",
     "\n",
     "eq_NAE.solve(\n",
     "    verbose=3,\n",
@@ -507,7 +530,7 @@
     "    maxiter=50,\n",
     "    xtol=1e-6,\n",
     "    constraints=constraints,\n",
-    ");"
+    ")"
    ]
   },
   {
@@ -769,7 +792,7 @@
     }
    ],
    "source": [
-    "# Evaluate lambda near the axis\n",
+    "# Evaluate lambda at the axis\n",
     "data_surf = desc_eq.compute(\"lambda\", grid=grid)\n",
     "data_nae = eq_NAE.compute(\"lambda\", grid=grid)\n",
     "lam_surf = data_surf[\"lambda\"]\n",
