--- a/docs/notebooks/zernike_eval.ipynb
+++ b/docs/notebooks/zernike_eval.ipynb
@@ -93,8 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DESC version 0.10.3+309.g4821a557.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
-      "Using device: CPU, with 12.28 GB available memory\n"
+      "DESC version 0.10.3+344.g935d7043.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 12.23 GB available memory\n"
      ]
     }
    ],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -151,25 +151,25 @@
      "output_type": "stream",
      "text": [
       "zernike_radial, 0th derivative\n",
-      "817 µs ± 13.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "1.93 ms ± 184 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 1st derivative\n",
-      "911 µs ± 14.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "2.44 ms ± 236 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 2nd derivative\n",
-      "1.07 ms ± 6.83 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "2.63 ms ± 222 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 3rd derivative\n",
-      "1.58 ms ± 3.84 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "2.9 ms ± 235 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "print(\"zernike_radial, 0th derivative\")\n",
-    "%timeit _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 0).block_until_ready()\n",
+    "%timeit -n 100 _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 0).block_until_ready()\n",
     "print(\"zernike_radial, 1st derivative\")\n",
-    "%timeit _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 1).block_until_ready()\n",
+    "%timeit -n 100 _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 1).block_until_ready()\n",
     "print(\"zernike_radial, 2nd derivative\")\n",
-    "%timeit _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 2).block_until_ready()\n",
+    "%timeit -n 100 _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 2).block_until_ready()\n",
     "print(\"zernike_radial, 3rd derivative\")\n",
-    "%timeit _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 3).block_until_ready()"
+    "%timeit -n 100 _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 3).block_until_ready()"
    ]
   },
   {
@@ -198,13 +198,13 @@
    ],
    "source": [
     "print(\"zernike_radial_poly, 0th derivative\")\n",
-    "%timeit _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=0, exact=False)\n",
+    "%timeit -n 100 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=0, exact=False)\n",
     "print(\"zernike_radial_poly, 1st derivative\")\n",
-    "%timeit _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=1, exact=False)\n",
+    "%timeit -n 100 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=1, exact=False)\n",
     "print(\"zernike_radial_poly, 2nd derivative\")\n",
-    "%timeit _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=2, exact=False)\n",
+    "%timeit -n 100 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=2, exact=False)\n",
     "print(\"zernike_radial_poly, 3rd derivative\")\n",
-    "%timeit _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=3, exact=False)"
+    "%timeit -n 100 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=3, exact=False)"
    ]
   },
   {
