--- a/docs/notebooks/tutorials/coil_optimization_REGCOIL.ipynb
+++ b/docs/notebooks/tutorials/coil_optimization_REGCOIL.ipynb
@@ -1079,9 +1079,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "desc-env [~/.conda/envs/desc-env/]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda_desc-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1093,7 +1093,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
