--- a/docs/notebooks/tutorials/poincare_boundary_condition.ipynb
+++ b/docs/notebooks/tutorials/poincare_boundary_condition.ipynb
@@ -49,16 +49,16 @@
     }
    ],
    "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
     "from desc.objectives import (\n",
     "    ObjectiveFunction,\n",
-    "    ForceBalance\n",
+    "    ForceBalance,\n",
+    "    get_fixed_boundary_constraints,\n",
     ")\n",
-    "from desc.plotting import plot_comparison\n",
-    "from desc.optimize import Optimizer\n",
-    "import numpy as np\n",
-    "%matplotlib inline\n",
     "from desc.examples import get\n",
-    "from desc.objectives.getters import get_fixed_boundary_constraints"
+    "from desc.optimize import Optimizer\n",
+    "from desc.plotting import plot_comparison"
    ]
   },
   {
@@ -326,13 +326,6 @@
     "\n",
     "We can also create a new surface object called \"PoincareSurface\" to set our optimization problem as LCFS."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
