--- a/docs/notebooks/zernike_eval.ipynb
+++ b/docs/notebooks/zernike_eval.ipynb
@@ -93,8 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DESC version 0.10.3+344.g935d7043.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
-      "Using device: CPU, with 12.23 GB available memory\n"
+      "DESC version 0.10.4+69.g8eed3306.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 12.35 GB available memory\n"
      ]
     }
    ],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -151,30 +151,30 @@
      "output_type": "stream",
      "text": [
       "zernike_radial, 0th derivative\n",
-      "1.93 ms ± 184 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "976 µs ± 19.3 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 1st derivative\n",
-      "2.44 ms ± 236 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "1.81 ms ± 20.8 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 2nd derivative\n",
-      "2.63 ms ± 222 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "1.5 ms ± 18.6 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 3rd derivative\n",
-      "2.9 ms ± 235 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "1.49 ms ± 18.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "print(\"zernike_radial, 0th derivative\")\n",
-    "%timeit -n 100 _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 0).block_until_ready()\n",
+    "%timeit -n 1000 _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 0).block_until_ready()\n",
     "print(\"zernike_radial, 1st derivative\")\n",
-    "%timeit -n 100 _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 1).block_until_ready()\n",
+    "%timeit -n 1000 _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 1).block_until_ready()\n",
     "print(\"zernike_radial, 2nd derivative\")\n",
-    "%timeit -n 100 _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 2).block_until_ready()\n",
+    "%timeit -n 1000 _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 2).block_until_ready()\n",
     "print(\"zernike_radial, 3rd derivative\")\n",
-    "%timeit -n 100 _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 3).block_until_ready()"
+    "%timeit -n 1000 _ = zernike_radial(r, basis.modes[:,0], basis.modes[:,1], 3).block_until_ready()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -186,13 +186,13 @@
      "output_type": "stream",
      "text": [
       "zernike_radial_poly, 0th derivative\n",
-      "18.7 ms ± 1.01 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "11.7 ms ± 262 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 1st derivative\n",
-      "18.9 ms ± 473 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "11.4 ms ± 257 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 2nd derivative\n",
-      "18.1 ms ± 1.64 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "11.4 ms ± 125 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 3rd derivative\n",
-      "18.4 ms ± 2.06 ms per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "11.3 ms ± 51.1 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -242,18 +242,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "zernike_radial_exact, 0th derivative\n",
-      "CPU times: user 5.56 s, sys: 0 ns, total: 5.56 s\n",
-      "Wall time: 5.56 s\n",
+      "zernike_radial_exact, 0th derivative\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5.45 s, sys: 0 ns, total: 5.45 s\n",
+      "Wall time: 5.45 s\n",
       "zernike_radial_exact, 1st derivative\n",
-      "CPU times: user 5.56 s, sys: 0 ns, total: 5.56 s\n",
-      "Wall time: 5.56 s\n",
+      "CPU times: user 5.52 s, sys: 0 ns, total: 5.52 s\n",
+      "Wall time: 5.52 s\n",
       "zernike_radial_exact, 2nd derivative\n",
-      "CPU times: user 5.54 s, sys: 0 ns, total: 5.54 s\n",
-      "Wall time: 5.54 s\n",
+      "CPU times: user 5.42 s, sys: 0 ns, total: 5.42 s\n",
+      "Wall time: 5.42 s\n",
       "zernike_radial_exact, 3rd derivative\n",
-      "CPU times: user 5.53 s, sys: 0 ns, total: 5.53 s\n",
-      "Wall time: 5.53 s\n"
+      "CPU times: user 5.72 s, sys: 0 ns, total: 5.72 s\n",
+      "Wall time: 5.72 s\n"
      ]
     }
    ],
@@ -284,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -346,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -414,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -484,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -554,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -626,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -696,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -766,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -836,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
