--- a/docs/notebooks/zernike_eval.ipynb
+++ b/docs/notebooks/zernike_eval.ipynb
@@ -93,8 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DESC version 0.10.4+69.g8eed3306.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
-      "Using device: CPU, with 12.35 GB available memory\n"
+      "DESC version 0.10.4+75.g680c7e14.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 11.96 GB available memory\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -151,13 +151,13 @@
      "output_type": "stream",
      "text": [
       "zernike_radial, 0th derivative\n",
-      "976 µs ± 19.3 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "1.07 ms ± 610 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 1st derivative\n",
-      "1.81 ms ± 20.8 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "1.57 ms ± 7.89 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 2nd derivative\n",
-      "1.5 ms ± 18.6 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
+      "1.28 ms ± 7.58 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial, 3rd derivative\n",
-      "1.49 ms ± 18.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "1.28 ms ± 10.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -186,25 +186,25 @@
      "output_type": "stream",
      "text": [
       "zernike_radial_poly, 0th derivative\n",
-      "11.7 ms ± 262 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "10.5 ms ± 98.1 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n",
       "zernike_radial_poly, 1st derivative\n",
-      "11.4 ms ± 257 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "10.4 ms ± 104 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 2nd derivative\n",
-      "11.4 ms ± 125 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "10.3 ms ± 38.4 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "zernike_radial_poly, 3rd derivative\n",
-      "11.3 ms ± 51.1 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "10.3 ms ± 62.8 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
     "print(\"zernike_radial_poly, 0th derivative\")\n",
-    "%timeit -n 100 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=0, exact=False)\n",
+    "%timeit -n 1000 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=0, exact=False)\n",
     "print(\"zernike_radial_poly, 1st derivative\")\n",
-    "%timeit -n 100 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=1, exact=False)\n",
+    "%timeit -n 1000 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=1, exact=False)\n",
     "print(\"zernike_radial_poly, 2nd derivative\")\n",
-    "%timeit -n 100 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=2, exact=False)\n",
+    "%timeit -n 1000 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=2, exact=False)\n",
     "print(\"zernike_radial_poly, 3rd derivative\")\n",
-    "%timeit -n 100 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=3, exact=False)"
+    "%timeit -n 1000 _ = zernike_radial_poly(r[:,np.newaxis], basis.modes[:,0], basis.modes[:,1], dr=3, exact=False)"
    ]
   },
   {
