add get_poincare_surface_at function

--- a/docs/notebooks/tutorials/poincare_boundary_condition.ipynb
+++ b/docs/notebooks/tutorials/poincare_boundary_condition.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DESC version 0.10.4+120.g0dffdf8d.dirty,using JAX backend, jax version=0.4.14, jaxlib version=0.4.14, dtype=float64\n",
+      "Using device: CPU, with 11.90 GB available memory\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,182 +101,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1.01245004e+01 -1.20593813e+00 -2.14312640e-01  9.90569962e-02\n",
-      " -6.37065599e-02 -2.20673016e-02  1.43360204e-01 -1.34152750e-01\n",
-      " -6.16536168e-03 -1.56200491e-02  1.96317207e-02  7.07478110e-04\n",
-      " -5.46132115e-02  3.57113944e-02  6.96140881e-03  5.05335933e-04\n",
-      " -1.70405621e-02  4.06311823e-03 -3.07011446e-04 -7.23165495e-04\n",
-      "  1.07866456e-03  9.29439410e-04 -1.91584502e-03 -9.16058332e-04\n",
-      " -1.99454636e-05  3.42265660e-03 -1.25614908e-03  1.85578998e-04\n",
-      "  8.78034305e-04 -5.13861057e-05 -1.81778109e-03  7.98265833e-04\n",
-      "  1.66253240e-03  5.28448713e-04 -4.69601574e-05  2.07597806e-05\n",
-      " -1.07918020e-03  9.49469321e-05 -6.83814318e-04 -2.16910371e-04\n",
-      "  4.00209359e-05  3.97623138e-06  2.35617450e-03 -2.37328877e-03\n",
-      " -7.72318906e-04 -1.28282990e-04  8.62363400e-05 -1.94293298e-05\n",
-      "  0.00000000e+00  5.69872059e-06 -4.87658850e-04  2.44180061e-04\n",
-      "  9.75456121e-05  1.51698661e-07 -3.97623138e-06 -7.92523919e-04\n",
-      "  3.52419196e-04  1.85178491e-04 -2.02129704e-05 -3.25565544e-05\n",
-      " -1.33045081e-06  0.00000000e+00  5.67704591e-05 -4.68645304e-05\n",
-      " -1.16703869e-04 -4.07174925e-05  1.12134712e-05  0.00000000e+00\n",
-      "  2.83541592e-04 -3.08777145e-04  3.00279073e-05  3.31134994e-05\n",
-      "  1.32258354e-05  0.00000000e+00  0.00000000e+00 -8.97655426e-05\n",
-      "  6.58086323e-05 -3.86330619e-05  5.21344152e-06  0.00000000e+00\n",
-      "  0.00000000e+00 -5.91798719e-05  1.41589589e-05  4.56720887e-06\n",
-      " -2.34385247e-06  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
-      "  1.24593087e-05 -1.09165284e-05  8.92552742e-06  0.00000000e+00\n",
-      "  0.00000000e+00  0.00000000e+00  1.51179425e-05 -2.94587045e-05\n",
-      "  9.81078239e-06  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
-      "  0.00000000e+00 -2.61980802e-05  1.32960794e-05  0.00000000e+00\n",
-      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  9.72799111e-07\n",
-      "  1.60015570e-06  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
-      "  0.00000000e+00  0.00000000e+00  2.85535983e-06  0.00000000e+00\n",
-      "  0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
-      "  2.87426017e-07  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
-      "  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      "[[ 0  0  0]\n",
-      " [ 1  1  0]\n",
-      " [ 2  0  0]\n",
-      " [ 2  2  0]\n",
-      " [ 3  1  0]\n",
-      " [ 3  3  0]\n",
-      " [ 4  0  0]\n",
-      " [ 4  2  0]\n",
-      " [ 4  4  0]\n",
-      " [ 5  1  0]\n",
-      " [ 5  3  0]\n",
-      " [ 5  5  0]\n",
-      " [ 6  0  0]\n",
-      " [ 6  2  0]\n",
-      " [ 6  4  0]\n",
-      " [ 6  6  0]\n",
-      " [ 7  1  0]\n",
-      " [ 7  3  0]\n",
-      " [ 7  5  0]\n",
-      " [ 7  7  0]\n",
-      " [ 8  0  0]\n",
-      " [ 8  2  0]\n",
-      " [ 8  4  0]\n",
-      " [ 8  6  0]\n",
-      " [ 8  8  0]\n",
-      " [ 9  1  0]\n",
-      " [ 9  3  0]\n",
-      " [ 9  5  0]\n",
-      " [ 9  7  0]\n",
-      " [ 9  9  0]\n",
-      " [10  0  0]\n",
-      " [10  2  0]\n",
-      " [10  4  0]\n",
-      " [10  6  0]\n",
-      " [10  8  0]\n",
-      " [10 10  0]\n",
-      " [11  1  0]\n",
-      " [11  3  0]\n",
-      " [11  5  0]\n",
-      " [11  7  0]\n",
-      " [11  9  0]\n",
-      " [11 11  0]\n",
-      " [12  0  0]\n",
-      " [12  2  0]\n",
-      " [12  4  0]\n",
-      " [12  6  0]\n",
-      " [12  8  0]\n",
-      " [12 10  0]\n",
-      " [12 12  0]\n",
-      " [13  1  0]\n",
-      " [13  3  0]\n",
-      " [13  5  0]\n",
-      " [13  7  0]\n",
-      " [13  9  0]\n",
-      " [13 11  0]\n",
-      " [14  0  0]\n",
-      " [14  2  0]\n",
-      " [14  4  0]\n",
-      " [14  6  0]\n",
-      " [14  8  0]\n",
-      " [14 10  0]\n",
-      " [14 12  0]\n",
-      " [15  1  0]\n",
-      " [15  3  0]\n",
-      " [15  5  0]\n",
-      " [15  7  0]\n",
-      " [15  9  0]\n",
-      " [15 11  0]\n",
-      " [16  0  0]\n",
-      " [16  2  0]\n",
-      " [16  4  0]\n",
-      " [16  6  0]\n",
-      " [16  8  0]\n",
-      " [16 10  0]\n",
-      " [16 12  0]\n",
-      " [17  1  0]\n",
-      " [17  3  0]\n",
-      " [17  5  0]\n",
-      " [17  7  0]\n",
-      " [17  9  0]\n",
-      " [17 11  0]\n",
-      " [18  0  0]\n",
-      " [18  2  0]\n",
-      " [18  4  0]\n",
-      " [18  6  0]\n",
-      " [18  8  0]\n",
-      " [18 10  0]\n",
-      " [18 12  0]\n",
-      " [19  1  0]\n",
-      " [19  3  0]\n",
-      " [19  5  0]\n",
-      " [19  7  0]\n",
-      " [19  9  0]\n",
-      " [19 11  0]\n",
-      " [20  0  0]\n",
-      " [20  2  0]\n",
-      " [20  4  0]\n",
-      " [20  6  0]\n",
-      " [20  8  0]\n",
-      " [20 10  0]\n",
-      " [20 12  0]\n",
-      " [21  1  0]\n",
-      " [21  3  0]\n",
-      " [21  5  0]\n",
-      " [21  7  0]\n",
-      " [21  9  0]\n",
-      " [21 11  0]\n",
-      " [22  0  0]\n",
-      " [22  2  0]\n",
-      " [22  4  0]\n",
-      " [22  6  0]\n",
-      " [22  8  0]\n",
-      " [22 10  0]\n",
-      " [22 12  0]\n",
-      " [23  1  0]\n",
-      " [23  3  0]\n",
-      " [23  5  0]\n",
-      " [23  7  0]\n",
-      " [23  9  0]\n",
-      " [23 11  0]\n",
-      " [24  0  0]\n",
-      " [24  2  0]\n",
-      " [24  4  0]\n",
-      " [24  6  0]\n",
-      " [24  8  0]\n",
-      " [24 10  0]\n",
-      " [24 12  0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(eq_poin.surface.R_lmn)\n",
-    "print(eq_poin.surface.R_basis.modes)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -276,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
